--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 		</td>
 	</table>
 	
+	<div id="clickMeButton"><br>Click Me</br></div>
+	
 <script type="text/javascript"
  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
