--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		</td>
 	</table>
 	
-	<div id="clickMeButton"><br>Click Me</br></div>
+	<div id="clickMeButton"><br/><strong>Click Me</strong></div> <!-- adding <br/> centered div's text --> 
 	
 <script type="text/javascript"
  src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
